# wallet-api

./: .dockerignore  .env.example  .gitignore  README.MD  docker-compose.yaml  pyproject.toml
docker/api/: Dockerfile
docker/postgresql/: Dockerfile
migration/: env.py
migration/versions/: 86dc00b07342_init_migration.py
scripts/: init.postgres.sh
src/: database.py  main.py  settings.py
src/dependencies/: __init__.py  common.py
src/exceptions/: base.py  handle_http_exceptions.py  wallet.py
src/models/: __init__.py  base.py  wallet.py
src/repository/: wallet.py
src/routes/: __init__.py  wallet.py
src/schemas/: __init__.py  base.py  wallet.py
src/services/: base.py  wallet.py
tests/: conftest.py
tests/wallet/: test_wallet.py
