[project]
name = "wallet-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Nadorozhnyy",email = "59502289+Nadorozhnyy@users.noreply.github.com"}
]
readme = "README.md"
packages = [
    {include = "wallet-api", from = "src"}
]
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.116.1,<0.117.0)",
    "alembic (>=1.16.4,<2.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
